<resources>
    <string name="app_name">JardIn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="search">Search</string>
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Profile</item>
        <item>Sync</item>
        <item>Workplan</item>
        <item>Activities</item>
        <item>Customers</item>
        <item>Collaterals</item>
        <item>Logout</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="customer_header_id">ID</string>
    <string name="customer_header_name">Name</string>
    <string name="customer_header_type">Type</string>
    <string name="customer_header_province">Province</string>
    <string name="profile_information">Information</string>
    <string name="profile_notification">Notifications</string>
    <string name="profile_info_userinformation">User Information</string>
    <string name="profile_info_username">Username</string>
    <string name="profile_info_firstname">First Name</string>
    <string name="profile_info_lastname">Last Name</string>
    <string name="profile_info_area">Area(s) assigned</string>
    <string name="profile_info_syncinformation">Syncing Information</string>
    <string name="profile_info_lastsync">Last sync</string>
    <string name="profile_notif_date">Date</string>
    <string name="profile_notif_notification">Notification</string>
    <string name="profile_notif_action">Action</string>
    <string name="profile_notif_remove">Remove</string>
    <string name="workplan_title">Workplan</string>
    <string name="workplan_header_id">WPID</string>
    <string name="workplan_header_customer">Customer</string>
    <string name="workplan_header_date">Date</string>
    <string name="workplan_header_activity">Activity Type</string>
    <string name="activity_information">Activity Information</string>
    <string name="jdi_product_stock_check">JDI Product Stock Check</string>
    <string name="jdi_merchandising_check">JDI Merchandising Check</string>
    <string name="competitor_product_stock_check">Competitor Product Stock Check</string>
    <string name="marketing_intel"> Marketing Intel</string>
    <string name="project_requirements">Project Requirements</string>
    <string name="diy_or_supermarket_photos">DIY or Supermarket Photos</string>
    <string name="customer_view_details">Customer Contact Person</string>
    <string name="products">Products</string>
    <string name="general_info">General Information</string>
    <string name="crm_no">CRM No.:</string>
    <string name="start_time">Start Time:</string>
    <string name="latitude">Latitude:</string>
    <string name="objective">Objective:</string>
    <string name="highlights">Highlights:</string>
    <string name="follow_up_commitment_date">Follow-up Commitment Date:</string>
    <string name="workplan_entry">Workplan Entry:</string>
    <string name="first_time_visit">First Time Visit:</string>
    <string name="created_time">Created Time:</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="activity_gen">Activity:</string>
    <string name="end_time">End Time:</string>
    <string name="longitude">Longitude:</string>
    <string name="notes">Notes:</string>
    <string name="next_steps">Next Steps:</string>
    <string name="activity_type">Activity Type:</string>
    <string name="customer">Customer:</string>
    <string name="planned_visit">Planned Visit:</string>
    <string name="modified_time">Modified Time:</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="back_to_activity">Back to Activity </string>
    <string name="workplan_gen_info">Workplan</string>
    <string name="venue">Venue:</string>
    <string name="number_of_attendees">Number of Attendees:</string>
    <string name="with_coSMRs">With CoSMRs</string>
    <string name="smr">SMR:</string>
    <string name="diy_or_supermarket_gen_info">DIY or Supermarket</string>
    <string name="issues_identified">Issues Identified:</string>
    <string name="feedback_from_customer">Feedback From Customer:</string>
    <string name="ongoing_campaigns">Ongoing Campaigns:</string>
    <string name="retail_visit">Retail Visit:</string>
    <string name="last_delivery">Last Delivery:</string>
    <string name="promo_stubs_details">Promo Stubs Details:</string>
    <string name="project_visit_gen_info">Project Visit:</string>
    <string name="project_name">Project Name:</string>
    <string name="project_stage">Project Stage:</string>
    <string name="project_category">Project Category:</string>
    <string name="trainings_gen_info">Trainings</string>
    <string name="all_training_types">All Training Types</string>
    <string name="date_gen_info">Date:</string>
    <string name="time_gen_info">Time:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="complete_cancel">Canceled!</string>
    <string name="error">Error saving</string>
    <string name="complete">Saved!</string>
    <string name="crm_no_jdi">CRM No.</string>
    <string name="activity_jdi">Activity</string>
    <string name="product_jdi">Product</string>
    <string name="jdi_stock_status">Stock Status</string>
    <string name="jdi_quantity">Quantity</string>
    <string name="loaded_on_shelves_jdi">Loaded On Shelves</string>
    <string name="assigned_to_jdi">Assigned To</string>
    <string name="action_jdi">Action</string>
    <string name="add_jdi_product_stock_check"> Add JDI Product Stock Check</string>
    <string name="all_caps_add_jdi_product_stock_check">ADD JDI PRODUCT STOCK CHECK</string>
    <string name="jdi_product_stock_check_details">JDI PRODUCT STOCK CHECK DETAILS</string>
    <string name="supplier_jdi_product_stock_check">Supplier</string>
    <string name="created_time_jdi_product_stock_check">Created Time</string>
    <string name="modified_time_jdi_product_stock_check">Modified Time</string>
    <string name="edit_jdi_product_stock_check_detail">Edit JDI Product Stock Check</string>
    <string name="create">Create</string>
    <string name="crm_no_jdi_merchandising">CRM No</string>
    <string name="activity_jdi_merchandising">Activity</string>
    <string name="product_jdi_merchandising">Product</string>
    <string name="status_jdi_merchandising">Status</string>
    <string name="assigned_to_merchandising">Assigned To</string>
    <string name="action_merchandising">Action</string>
    <string name="add_jdi_merchandising_check">Add JDI Merchandising Check</string>
    <string name="all_caps_add_jdi_merchandising_check">ADD JDI MERCHANDISING CHECK</string>
    <string name="jdi_merchandising_check_details">JDI MERCHANDISING CHECK DETAILS</string>
    <string name="created_time_jdi_merchandising">Created Time</string>
    <string name="modified_time_jdi_merchandising">Modified Time</string>
    <string name="edit_jdi_merchandising_check_details">Edit JDI Merchandising Check</string>
    <string name="crm_no_competitor_stock_check">CRM No</string>
    <string name="activity_competitor_stock_check">Activity</string>
    <string name="competitor_product">Competitor Product</string>
    <string name="stock_status_competitor_product">Stock Status</string>
    <string name="loaded_on_shelves_competitor_product">Loaded On Shelves</string>
    <string name="assigned_to_competitor_product">Assigned To</string>
    <string name="action_competitor_product_stock_check">Action</string>
    <string name="add_competitor_product_stock_check">Add Competitor Product Stock Check</string>
    <string name="all_caps_add_competitor_product_stock_check">ADD COMPETITOR PRODUCT STOCK CHECK</string>
    <string name="competitor_product_stock_check_details">COMPETITOR PRODUCT STOCK CHECK DETAILS</string>
    <string name="edit_competitor_product_stock_check_details">Edit Competitor Product Stock Check</string>
    <string name="created_time_competitor_stock_check">Created Time</string>
    <string name="modified_time_competitor_stock_check">Modified Time</string>
    <string name="crm_no_marketing_intel">CRM No</string>
    <string name="activity_marketing_intel">Activity</string>
    <string name="competitor_marketing_intel">Competitor</string>
    <string name="details_marketing_intel">Details</string>
    <string name="remarks_marketing_intel">Remarks</string>
    <string name="assigned_to_marketing_intel">Assigned To</string>
    <string name="action_marketing_intel">Action</string>
    <string name="add_marketing_intel">Add Marketing Intel</string>
    <string name="all_caps_add_marketing_intel">ADD MARKETING INTEL</string>
    <string name="marketing_intel_details">MARKETING INTEL DETAILS</string>
    <string name="created_time_marketing_intel">Created Time</string>
    <string name="modified_time_marketing_intel">Modified Time</string>
    <string name="edit_marketing_intel">Edit Marketing Intel</string>
    <string name="crm_proj_requirements">CRM No</string>
    <string name="activity_proj_requirements">Activity</string>
    <string name="project_requirement_type">Project Requirement Type</string>
    <string name="date_needed">Date Needed</string>
    <string name="assigned_to_proj_requirement">Assigned To</string>
    <string name="action_proj_requirement">Action</string>
    <string name="add_proj_requirement">Add Project Requirement</string>
    <string name="all_caps_add_proj_requirement">ADD PROJECT REQUIREMENT</string>
    <string name="project_requirement_details">PROJECT REQUIREMENT DETAILS</string>
    <string name="square_meters_proj_requirements">Square Meters</string>
    <string name="products_used_proj_requirements">Products Used</string>
    <string name="other_details_proj_requirements">Other Details</string>
    <string name="created_time_proj_requirements">Created Time</string>
    <string name="modified_time_proj_requirements">Modified Time</string>
    <string name="edit_proj_requirements">Edit Project Requirement</string>
    <string name="title">Title</string>
    <string name="filename">Filename</string>
    <string name="modified_time_diy_supermarket_photos">Modified Time</string>
    <string name="add_diy_or_supermarket_photos">Add DIY or Supermarket Photo</string>
    <string name="all_caps_add_diy_or_supermarket_photos">ADD DIY OR SUPERMARKET PHOTO</string>
    <string name="crm_no_contact_person">CRM No</string>
    <string name="firstname_contact_person">First Name</string>
    <string name="lastname_contact_person">Last Name</string>
    <string name="position_contact_person">Position</string>
    <string name="customer_contact_person">Customer</string>
    <string name="mobile_no_contact_person">Mobile No</string>
    <string name="assigned_to_contact_person">Assigned To</string>
    <string name="action_contact_person">Action</string>
    <string name="add_customer_contact_person">Add Customer Contact Person</string>
    <string name="all_caps_add_customer_contact_person">ADD CUSTOMER CONTACT PERSON</string>
    <string name="select_customer_contact_person">Select Customer Contact Person</string>
    <string name="all_caps_select_customer_contact_person">SELECT CUSTOMER CONTACT PERSON</string>
    <string name="select">Select</string>
    <string name="customer_contact_person_details">CUSTOMER CONTACT PERSON DETAILS</string>
    <string name="birthday_contact_person">Birthday</string>
    <string name="email_contact_person">Email Address</string>
    <string name="is_active_contact_person">Is Active</string>
    <string name="created_time_contact_person">Created Time</string>
    <string name="modified_time_contact_person">Modified Time</string>
    <string name="edit_customer_contact_person">Edit Customer Contact Person</string>
    <string name="crm_no_products">CRM No</string>
</resources>