<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="11" >

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/notif_list_item_left"
        android:text="@string/profile_notif_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xxlarge" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:background="@drawable/notif_list_item_center"
        android:text="@string/profile_notif_notification"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xxlarge" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@drawable/notif_list_item_right"
        android:text="@string/profile_notif_remove"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xxlarge" />

</LinearLayout>