<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profileinfo_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Johndoe"
        android:textSize="@dimen/text_superxlarge" />

    <TextView
        android:id="@+id/profileinfo_txt_infoheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/counter_text_bg"
        android:text="@string/profile_info_userinformation"
        android:textSize="@dimen/text_superlarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="8" >

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/profile_info_firstname"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_xxxxlarge" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:textColor="@color/text_color"
                android:text="@string/profile_info_lastname"
                android:textSize="@dimen/text_xxxxlarge" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/text_color"
                android:gravity="right"
                android:text="@string/profile_info_area"
                android:textSize="@dimen/text_xxxxlarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileinfo_txt_firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="John"
                android:textColor="@color/list_item_title"
                android:textSize="@dimen/text_xxxxlarge" />

            <TextView
                android:id="@+id/profileinfo_txt_lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Doe"
                android:textColor="@color/list_item_title"
                android:textSize="@dimen/text_xxxxlarge" />

            <TextView
                android:id="@+id/profileinfo_txt_area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/list_item_title"
                android:text="Area 1, area 2, area 3"
                android:textSize="@dimen/text_xxxxlarge" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/profileinfo_txt_syncheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/counter_text_bg"
        android:text="@string/profile_info_lastsync"
        android:textSize="@dimen/text_superlarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:textColor="@color/text_color"
                android:text="@string/profile_info_lastsync"
                android:textSize="@dimen/text_xxxxlarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileinfo_txt_lastsync"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/list_item_title"
                android:gravity="left"
                android:text="June 6, 2014 10:55am"
                android:textSize="@dimen/text_xxxxlarge" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>